# pad

./: .gitignore  Package.swift  README.md  run.fish
Sources/PadApp/: ContentView.swift  Info.plist  PadApp.swift
pad/: CMakeLists.txt  module.modulemap  pad-cli.cc  pad-test.cc  pad.cpp  pad.hpp  parser-test.cc  parser.cpp  parser.hpp  process.hpp  tokenizer-test.cc  tokenizer.cpp  tokenizer.hpp
